--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -41,8 +41,9 @@ $placeholder-text-color: $grey-2;
 // Fills
 $border-color-1: $grey-1;
 $border-color-2: $grey-2;
-$bg-fill-1: $green-1;
+// $bg-fill-1: $green-1;
+$bg-fill-1: RoyalBlue;
 $bg-fill-2: $dark-green;
-$button-hover: #3BA640;
+$button-hover: MidnightBlue;
 
 $hr-fill: $grey-2;
