--- a/css/global.css
+++ b/css/global.css
@@ -1,7 +1,3 @@
-.main__hr {
-  border-top: 1px solid #CCCCCC;
-}
-
 html {
   background-color: White;
   -webkit-box-sizing: border-box;
@@ -30,6 +26,22 @@ h1, h2, h3, h4, hr, ul, li, img, p, label, input {
   padding: 0;
 }
 
+button {
+  font-family: sans-serif;
+  font-size: 2rem;
+  font-weight: 500;
+  background-color: RoyalBlue;
+  border-radius: 7px;
+  border-style: none;
+  color: White;
+  cursor: pointer;
+  height: 60px;
+}
+
+button:hover {
+  background-color: MidnightBlue;
+}
+
 p {
   font-size: 1.7rem;
   font-weight: 400;
@@ -40,72 +52,5 @@ h1 {
   font-size: 2.2rem;
   font-weight: 600;
   line-height: 32px;
-}
-
-.main {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  width: 100%;
-  max-width: 600px;
-  padding: 25px 12px 0;
-}
-
-.main__heading {
-  margin-bottom: 15px;
-  text-align: center;
-}
-
-.main__hr {
-  width: 100%;
-}
-
-.settings {
-  margin-bottom: 25px;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-}
-
-.settings__column {
-  background-color: white;
-  width: 50%;
-}
-
-.settings__column--first {
-  background-color: #CCCCCC;
-}
-
-.settings__paragraph {
-  text-align: center;
-  margin-bottom: 6px;
-}
-
-.settings__number {
-  text-align: center;
-  margin-bottom: 6px;
-  font-size: 1.8rem;
-  font-weight: bold;
 }
 /*# sourceMappingURL=global.css.map */
