--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,8 @@
 // Index page styles
 //------------------------------
 
+// Main styles
+
 .main {
     // @include flex(column nowrap, center, flex-start);
     margin: 0 auto;
