--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 // Index page styles
 //------------------------------
 
-// Main styles
+// 
 
 .main {
     // @include flex(column nowrap, center, flex-start);
