--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -44,6 +44,7 @@ $border-color-2: $grey-2;
 // $bg-fill-1: $green-1;
 $bg-fill-1: RoyalBlue;
 $bg-fill-2: $dark-green;
-$button-hover: MidnightBlue;
+$button-fill: Sienna;
+$button-hover: #D2691E;
 
 $hr-fill: $grey-2;
