--- a/css/global.css
+++ b/css/global.css
@@ -30,7 +30,7 @@ button {
   font-family: sans-serif;
   font-size: 2rem;
   font-weight: 500;
-  background-color: RoyalBlue;
+  background-color: #A0522D;
   border-radius: 7px;
   border-style: none;
   color: White;
@@ -39,7 +39,7 @@ button {
 }
 
 button:hover {
-  background-color: MidnightBlue;
+  background-color: #D2691E;
 }
 
 p {
