--- a/css/global.scss
+++ b/css/global.scss
@@ -6,7 +6,7 @@
 //------------------------------
 // Site-wide styling
 //------------------------------
-// Global styles
+// 
 html {
     background-color: White;
     box-sizing: border-box;
