Added min and max inputs

--- a/css/global.css
+++ b/css/global.css
@@ -30,7 +30,7 @@ button {
   font-family: sans-serif;
   font-size: 2rem;
   font-weight: 500;
-  background-color: #A0522D;
+  background-color: Sienna;
   border-radius: 7px;
   border-style: none;
   color: White;
